these configs are weird and keep disappearing

--- a/engineering.yml
+++ b/engineering.yml
@@ -1,5 +1,5 @@
 recipes:
-  ff7c885f-1602-43dc-aa22-1c8cd57f52d8:
+  46c053b9-ee46-4ca7-bf77-8f1330e4dd3d:
     input1:
       ==: org.bukkit.inventory.ItemStack
       type: INK_SACK
@@ -14,6 +14,8 @@ recipes:
         - §r
         - §r§6Heal X
         - §rAbsorption I
+        enchants:
+          Glow: 9
     input2:
       ==: org.bukkit.inventory.ItemStack
       type: INK_SACK
@@ -27,6 +29,8 @@ recipes:
         - §rTreats infection.
         - §r
         - §r§6Immunity X
+        enchants:
+          Glow: 9
     output:
       ==: org.bukkit.inventory.ItemStack
       type: INK_SACK
@@ -41,3 +45,5 @@ recipes:
         - §r§6Heal II
         - §r§6Absorption II
         - §r§6Immunity X
+        enchants:
+          Glow: 9
