--- a/settings.yml
+++ b/settings.yml
@@ -243,7 +243,7 @@ points:
   death: 0.1
   kill:
     zombie: 1.0
-    pigman: .5
+    pigman: 0.5
     giant: 12.0
     player: 3.0
     guard: 0.8
