--- a/ranks.yml
+++ b/ranks.yml
@@ -57,3 +57,42 @@ ranks:
     chat_prefix: ''
     equipment:
       inventory: []
+  '1':
+    equipment:
+      inventory:
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
