--- a/mob_settings.yml
+++ b/mob_settings.yml
@@ -77,8 +77,106 @@ guard:
       maximum_z: 0
       enabled: false
   names:
-  - MrTeePee
-  - ConnMen
+  - Guard Forrest
+  - Guard Aaron
+  - Guard Brett
+  - Guard Randall
+  - Guard Lucian
+  - Guard Kibo
+  - Guard Jordan
+  - Guard Edan
+  - Guard Cadman
+  - Guard Clinton
+  - Guard Bevis
+  - Guard Tyrone
+  - Guard Aristotle
+  - Guard Quamar
+  - Guard Harding
+  - Guard Todd
+  - Guard Orlando
+  - Guard Porter
+  - Guard Mufutau
+  - Guard Thane
+  - Guard Gil
+  - Guard Cooper
+  - Guard Fulton
+  - Guard Gavin
+  - Guard Tobias
+  - Guard Jared
+  - Guard Tanner
+  - Guard Abdul
+  - Guard Porter
+  - Guard Elton
+  - Guard Zephania
+  - Guard Jelani
+  - Guard Dustin
+  - Guard Boris
+  - Guard Burke
+  - Guard Emery
+  - Guard Brock
+  - Guard Kato
+  - Guard Howard
+  - Guard Aidan
+  - Guard Neville
+  - Guard Tad
+  - Guard Hashim
+  - Guard Amal
+  - Guard Hilel
+  - Guard Austin
+  - Guard Jared
+  - Guard Sean
+  - Guard Burton
+  - Guard Gray
+  - Guard Victor
+  - Guard Kamal
+  - Guard Omar
+  - Guard Gareth
+  - Guard Steel
+  - Guard Hunter
+  - Guard Xavier
+  - Guard Branden
+  - Guard Silas
+  - Guard Vaughan
+  - Guard Cooper
+  - Guard Adam
+  - Guard Hakeem
+  - Guard Hashim
+  - Guard Hakeem
+  - Guard Blaze
+  - Guard Judah
+  - Guard Forrest
+  - Guard Nasim
+  - Guard Ulric
+  - Guard Dean
+  - Guard Uriah
+  - Guard Michael
+  - Guard Malik
+  - Guard Sebastian
+  - Guard Nissim
+  - Guard Nathaniel
+  - Guard Yardley
+  - Guard Nigel
+  - Guard Cade
+  - Guard Keith
+  - Guard Rajah
+  - Guard Cruz
+  - Guard Keefe
+  - Guard Steel
+  - Guard Keefe
+  - Guard Caldwell
+  - Guard Mannix
+  - Guard Wyatt
+  - Guard Joshua
+  - Guard Logan
+  - Guard Ira
+  - Guard Ciaran
+  - Guard Giacomo
+  - Guard Cruz
+  - Guard Eagan
+  - Guard Marvin
+  - Guard Dolan
+  - Guard Plato
+  - Guard Nathaniel
   attribute:
     jump:
       multiplier: 1.05
