--- a/userdata/676cfcee-f124-449e-b0ac-89dd44907bd0/tracked.yml
+++ b/userdata/676cfcee-f124-449e-b0ac-89dd44907bd0/tracked.yml
@@ -1,4 +1,4 @@
-thirst: 20.0
+thirst: 19.68421052631612
 poisoned: false
 bleeding: false
 ghost: false
@@ -6,10 +6,10 @@ zombie: false
 in_game: true
 tracked:
   kills:
-    zombie: 31
+    zombie: 117
     player: 0
-    pigman: 23
-    giant: 10
+    pigman: 0
+    giant: 0
     guard: 0
 temperature: 37.0
 died_while_offline: false
