--- a/spawn_regions.yml
+++ b/spawn_regions.yml
@@ -1,4 +1,5 @@
+#TODO Change Giant spawn from 100% when done testing
 regions:
-- 210885ab-355a-47e8-8e15-0bf083e30acb, (681.0, 68.0, -3263.0) to (716.0, 68.0, -3237.0) [0.125, 0.0, 20.0, 0.0]
+- 210885ab-355a-47e8-8e15-0bf083e30acb, (681.0, 68.0, -3263.0) to (716.0, 68.0, -3237.0) [0.125, 0.0, 100.0, 0.0]
 - 210885ab-355a-47e8-8e15-0bf083e30acb, (1922.0, 104.0, -3800.0) to (1977.0, 149.0, -3718.0) [0.125, 0.0, 20.0, 0.0]
 - 210885ab-355a-47e8-8e15-0bf083e30acb, (20.0, 32.0, -3450.0) to (53.0, 47.0, -3412.0) [0.125, 0.0, 35.0, 0.0]
