--- a/mob_settings.yml
+++ b/mob_settings.yml
@@ -202,8 +202,7 @@ giant:
       minimum: 1
       maximum: 1
     biome:
-      includes:
-      - Mesa Plateau
+      includes: []
     limits:
       minimum_z: -4095
       maximum_z: -3000
