--- a/mob_settings.yml
+++ b/mob_settings.yml
@@ -1,4 +1,3 @@
-#TODO Change Giant spawn from 100% when done testing
 pigman:
   spawn:
     chance: 10
@@ -201,13 +200,15 @@ giant:
     pack:
       minimum: 1
       maximum: 1
-    biome:
-      includes:
-      - Mesa Plateau
     limits:
       minimum_z: -4095
       maximum_z: -3000
       enabled: true
+    biome:
+      excludes:
+      - Ocean
+      includes:
+      - Mesa Plateau
   ability:
     reinforcement:
       minimum: 1
