--- a/mob_settings.yml
+++ b/mob_settings.yml
@@ -203,6 +203,8 @@ giant:
     biome:
       excludes:
       - Ocean
+      includes:
+      - Mesa Plateau
     limits:
       minimum_z: -4095
       maximum_z: -3000
