--- a/userdata/cc5e7f28-0abd-4a0e-b7b4-29032f5f6dcf/stats.yml
+++ b/userdata/cc5e7f28-0abd-4a0e-b7b4-29032f5f6dcf/stats.yml
@@ -1,21 +1,21 @@
 kills:
-  zombie: 7
+  zombie: 12
   player: 0
-  pigman: 31
+  pigman: 39
   giant: 2
   guard: 0
 revives:
   self: 0
   other: 0
 friends: 0
-drinks: 2
+drinks: 4
 deaths: 2
 heals:
   self:
-    infection: 0
+    infection: 1
     bleeding: 0
   other: 0
 deathstate:
   zombie: 2
   ghost: 1
-z_points: 53.900000000000006
+z_points: 63.5
