--- a/mob_settings.yml
+++ b/mob_settings.yml
@@ -207,7 +207,7 @@ giant:
     limits:
       minimum_z: -4095
       maximum_z: -3000
-      enabled: false
+      enabled: true
   ability:
     reinforcement:
       minimum: 1
