--- a/addons.yml
+++ b/addons.yml
@@ -17,7 +17,7 @@ enderpearls_explode:
   enabled: true
 chat:
   local:
-    enabled: false
+    enabled: true
   radio:
     enabled: true
   private:
